Bug 396821 - Mingw build errors
Summary: Mingw build errors
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.13.3
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks: 380136
  Show dependency treegraph
 
Reported: 2018-07-24 17:06 UTC by Ralf Habacker
Modified: 2018-08-17 11:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-07-24 17:06:47 UTC
cross compiling drkonqi with mingw fails. From 
https://build.opensuse.org/package/live_build_log/home:rhabacker:branches:windows:mingw:win32:KF547/mingw32-drkonqi5/openSUSE_Leap_42.3/x86_64
... 
[   73s] cd /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/build/src/parser && /usr/bin/i686-w64-mingw32-g++  -DQT_CORE_LIB -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_URL_CAST_FROM_STRING -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32_LEAN_AND_MEAN -DWINVER=0x0600 -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_UNICODE -D_USE_MATH_DEFINES -D_WIN32_IE=0x0600 -D_WIN32_WINNT=0x0600 @CMakeFiles/drkonqi_backtrace_parser.dir/includes_CXX.rsp -O2 -g -pipe -Wall -fexceptions --param=ssp-buffer-size=4 -mms-bitfields -DNDEBUG -fno-stack-protector -Wno-expansion-to-defined -std=c++0x -fno-operator-names -fno-exceptions -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -Wvla -Wdate-time -fvisibility=hidden -fno-keep-inline-dllexport   -std=gnu++11 -o CMakeFiles/drkonqi_backtrace_parser.dir/backtraceparsernull.cpp.obj -c /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/src/parser/backtraceparsernull.cpp
[   73s] In file included from /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/src/kdbgwin/abstract_generator.h:28:0,
[   73s]                  from /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/src/kdbgwin/msvc_generator.h:28,
[   73s]                  from /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/src/kdbgwin/main.cpp:26:
[   73s] /home/abuild/rpmbuild/BUILD/drkonqi-5.13.3/src/kdbgwin/common.h:44:10: fatal error: QString: No such file or directory
[   73s]  #include <QString>
[   73s]           ^~~~~~~~~
[   73s] compilation terminated.
...
Comment 1 Ralf Habacker 2018-07-27 07:54:11 UTC
see https://phabricator.kde.org/D14423
Comment 2 Ralf Habacker 2018-08-17 11:49:00 UTC
Git commit 7251f82347302b0dc3c62559f135e17937381da3 by Ralf Habacker.
Committed on 17/08/2018 at 11:48.
Pushed by habacker into branch 'master'.

Mingw compile fix

- fix finding of bfd, intl, iberty and z library
- fix drkonqi compile issue (missing functions setenv/unsetenv)
  by adding kdewin
- fix include filename case issues on cross compiling
- fix missing includes
FIXED-IN:5.13.5

Reviewed By: mlaurent
Differential Revision: https://phabricator.kde.org/D14423

M  +44   -0    CMakeLists.txt
M  +7    -0    src/CMakeLists.txt
M  +1    -1    src/drkonqibackends.cpp
M  +4    -3    src/kdbgwin/CMakeLists.txt
M  +2    -2    src/kdbgwin/abstract_generator.cpp
M  +2    -0    src/kdbgwin/abstract_generator.h
M  +11   -9    src/kdbgwin/common.h
M  +3    -1    src/kdbgwin/main.cpp
M  +1    -1    src/kdbgwin/mingw_generator.cpp
M  +3    -0    src/kdbgwin/process.h

https://commits.kde.org/drkonqi/7251f82347302b0dc3c62559f135e17937381da3