Mingw compile fix

- fix finding of bfd, intl, iberty and z library
- fix drkonqi compile issue (missing functions setenv/unsetenv)
  by adding kdewin
- fix include filename case issues on cross compiling
- fix missing includes

BUG:396821
FIXED-IN:5.13.5

Reviewed By: mlaurent
Differential Revision: https://phabricator.kde.org/D14423