src/kdbgwin/common.h
@@ -26,23 +26,25 @@
 #pragma once
 
 // the compiler only provides UNICODE. tchar.h checks for the _UNICODE macro
-#if defined(UNICODE)
+#if defined(MSC_VER) && defined(UNICODE)
 #define _UNICODE
 #endif
 
 // first: windows & compiler includes
-#include <Tchar.h>
-#include <Windows.h>
-#include <DbgHelp.h>
-#include <Assert.h>
-#include <Shlwapi.h>
-#include <Psapi.h>
-#include <TlHelp32.h>
+#include <tchar.h>
+#include <windows.h>
+#include <dbghelp.h>
+#include <assert.h>
+#include <shlwapi.h>
+#include <psapi.h>
+#include <tlhelp32.h>
 
+#include "drkonqi_debug.h"
 
 // second: Qt includes
+#include <QLoggingCategory>
 #include <QString>
-#include <QString>
+#include <QMap>
 
 
 // third: KDE includes
